--- a/plugins/users/app/views/users/new.html.erb
+++ b/plugins/users/app/views/users/new.html.erb
@@ -3,6 +3,11 @@
 <%= javascript_include_tag "digitalspaghetti.password.js" %>
   <style type="text/css">
     label.error { display: none; color: red; padding-left: 11.5em; padding-bottom: 1.5em; margin-top: -0.5em; text-align: left; vertical-align: top; width: 50% }
+    #userForm fieldset {
+	background-color: #eeeeee;
+	margin: 1em;
+	width: 75%;
+    }
   </style>
 <script language='javascript'>
 
@@ -43,7 +48,7 @@
 <% form_for :user, :url => { :action => "create"}, :html => { :id => "userForm", :autocomplete => :off}  do |f| %>
   <%= f.error_messages %>
 
-  <fieldset>
+  <fieldset class="wrapper">
     <legend> Basic User Data</legend>
     <p>
 	<label><%=_("Full Name")%></label>
@@ -65,7 +70,7 @@
     <p><label for="administrator_confirm_password" generated="true" class="error"></label><p>
 
   </fieldset>
-  <fieldset>
+  <fieldset class="wrapper">
     <legend>Group Membership</legend>
     <p>
 	<label><%=_("Groups")%></label>
@@ -76,7 +81,7 @@
 	<%= f.text_field :groupname %>
     </p>
   </fieldset>
-  <fieldset>
+  <fieldset class="wrapper">
     <legend>Detailed User Data </legend>
     <p>
 	<label><%=_("UID Number")%></label>
