--- a/plugins/users/app/views/users/edit.html.erb
+++ b/plugins/users/app/views/users/edit.html.erb
@@ -9,7 +9,7 @@
 	 display: none; color: red; padding-left: 11.5em; padding-bottom: 1.5em; margin-top: -0.5em; text-align: left; vertical-align: top; width: 50%
     }
 
-    .GContainer, .OverGContainer {
+    .GContainer {
         float: left;
         margin: 3px;
         width: 100px;
@@ -17,7 +17,7 @@
         padding: 5px;
      }
 
-     .GBox, .OverGBox, .miniGBox {
+     .GBox {
         border: #000 1px solid;
         padding: 2px;
         font-size: 10px;
@@ -25,6 +25,8 @@
         width: 94px;
         cursor: pointer;
         font-family: verdana, tahoma, arial;
+     }
+     #ContainerUser .GBox {
         background-color: #eee;
      }
 
