Avoid overlapping of fields and error msgs

--- a/plugins/users/app/views/users/new.html.erb
+++ b/plugins/users/app/views/users/new.html.erb
@@ -2,7 +2,7 @@
 <h3><%=_("New User")%></h3>
 <%= javascript_include_tag "digitalspaghetti.password.js" %>
   <style type="text/css">
-    label.error { display: none; color: red; padding-left: 11.5em; padding-bottom: 1.5em; margin-top: -0.5em; text-align: left; vertical-align: top; width: 50% }
+    label.error { display: none; color: red; padding-left: 11.5em; padding-bottom: 1.5em;  text-align: left; vertical-align: top; width: 50% }
     #userForm fieldset {
 	background-color: #eeeeee;
 	margin: 1em;
