close properly label tag

--- a/plugins/language/app/views/language/index.rhtml
+++ b/plugins/language/app/views/language/index.rhtml
@@ -3,7 +3,7 @@
 <% form_tag '/language/update' do -%>
   <fieldset id="language_set" class="">
     <p>
-	 <label><%=_("webYaST language")%> <label>
+	 <label><%=_("webYaST language")%> </label>
 <%= select_tag "webyast_language",
   options_for_select(LangHelper::LANGUAGES.invert.to_a.reject{|val| !(supported_languages.include?(val[1]))}.sort_by { |a| a[0].parameterize}, current_locale) %>
    </p>
