--- a/plugins/registration/app/views/registration/index.rhtml
+++ b/plugins/registration/app/views/registration/index.rhtml
@@ -8,7 +8,7 @@
      <fieldset>
        <p><strong><%=_("This system is registered")%></strong></p>
        <p><small><%=_("System number (GUID)")%> <%= @guid %></small></p>
-       <p><%= link_to _('Register again'), {:controller => :registration, :action =>:update}, :onclick=>"$('#progress').show()", :class => "button" %></p>
+       <p><%= link_to _('Register again'), {:controller => :registration, :action =>:reregister}, :onclick=>"$('#progress').show()", :class => "button" %></p>
      </fieldset>
   <%
        form_target_save = '/controlpanel'
