reintroduce indicator of webyast language to allow drop current behavior of language module

--- a/webclient/app/views/layouts/main.rhtml
+++ b/webclient/app/views/layouts/main.rhtml
@@ -53,6 +53,8 @@
           if host.blank? || user.blank? -%>
         <% else -%>
           <ul>
+          <li><%=_("Language:")%> <strong><%= link_to_remote(current_locale_name,
+                  :update =>"language_selection", :url => { :controller => :controlpanel, :action => :select_language} ) %></strong></li>
             <li><%=_("Connected host:")%> <strong><%= host.name -%></strong></li>
             <li><%=_("User:")%> <strong><%= user -%></strong></li>
           </ul>
