fixed text for delete user (bnc#581153)

--- a/plugins/users/app/views/users/index.html.erb
+++ b/plugins/users/app/views/users/index.html.erb
@@ -40,7 +40,7 @@
   <li class="row">
    <%= link_to "<span class='login'><b>" + user.uid + "</b></span> <span class='fullname'>" + (user.cn || "") + "</span>", {:action => :edit, :id => user.id}, :onclick=>"$('#progress').show()" %>
     <% if @permissions[:userdelete] %>
-    <span class="del_user"><%= html_delete_link(user.uid, :destroy) %></span>
+    <span class="del_user"><%= html_delete_link(user.uid, :destroy, _("Are you sure to delete user %s?") % user.id ) %></span>
     <% end %>
   </li>
   <% end %>
