do not show save button if nothing is there to be saved (bnc#582600)

--- a/plugins/registration/app/views/registration/index.rhtml
+++ b/plugins/registration/app/views/registration/index.rhtml
@@ -39,7 +39,12 @@
     <p><%= link_to _('Detail'), {:controller => :registration, :action =>:detail}, :onclick=>"$('#progress').show()" %></p>
   <% end %>
 
-  <p><%= form_send_buttons %></p>
+  <p><%= if @showstatus then
+           form_back_button
+         else
+           form_send_buttons
+         end
+      %></p>
 
 <% end -%>
 </div>
