move language selection to whole wy, not just after login

--- a/webclient/app/views/layouts/main.rhtml
+++ b/webclient/app/views/layouts/main.rhtml
@@ -51,10 +51,12 @@
         <% host = Host.find(session[:host]) rescue nil
           user = session[:user]
           if host.blank? || user.blank? -%>
+          <ul><li><%=_("Language:")%> <strong><%= link_to_remote(current_locale_name,
+                  :update =>"language_selection", :url => { :controller => :main, :action => :select_language} ) %></strong></li></ul>
         <% else -%>
           <ul>
           <li><%=_("Language:")%> <strong><%= link_to_remote(current_locale_name,
-                  :update =>"language_selection", :url => { :controller => :controlpanel, :action => :select_language} ) %></strong></li>
+                  :update =>"language_selection", :url => { :controller => :main, :action => :select_language} ) %></strong></li>
             <li><%=_("Connected host:")%> <strong><%= host.name -%></strong></li>
             <li><%=_("User:")%> <strong><%= user -%></strong></li>
           </ul>
