--- a/plugins/services/app/views/services/_result.rhtml
+++ b/plugins/services/app/views/services/_result.rhtml
@@ -1,24 +1,19 @@
-   <div class="box">
-   <div class="table">
-      <table class="listing form" cellpadding="0" cellspacing="0">
-      <tr>
-          <th class="full" colspan="2"><%=_("Service Call Result")%></th>
-      </tr>
-      <tr>
-          <td class="first" width="120"><strong><%=_("Result")%></strong></td>
-          <td class="last"><%=h @error_string %></td>
-      </tr>
-      <tr class="bg">
-          <td class="first"><strong><%=_("Description")%></strong></td>
-          <td class="last"><%=h @result_string %></td>
-      </tr>
-      </table>
-      <p>
-      <% if params.has_key?("custom") -%>
-      <a href="services?custom=1" class="button"><%=_("Back")%></a>
-      <% else -%>
-      <a href="services" class="button"><%=_("Back")%></a>
-      </p>
-      <% end -%>
-   </div>
-   </div>
+<% if @result_string %>
+<p></p>
+<div class="table">
+   <table class="listing form" cellpadding="0" cellspacing="0">
+   <tr>
+       <th class="full" colspan="2"><%=_("Service Call Result")%></th>
+   </tr>
+   <tr>
+       <td class="first" width="120"><strong><%=_("Result")%></strong></td>
+       <td class="last"><%=h @error_string %></td>
+   </tr>
+   <tr class="bg">
+       <td class="first"><strong><%=_("Description")%></strong></td>
+       <td class="last"><%=h @result_string %></td>
+   </tr>
+   </table>
+   <p>
+</div>
+<% end %>
