--- a/plugins/services/app/views/services/index.rhtml
+++ b/plugins/services/app/views/services/index.rhtml
@@ -21,6 +21,7 @@ $(document).ready(function() {
     $("#services-list h4").click(function(){
 	$(this).next(".service-content").slideToggle("slow");
 	$(this).closest("li").siblings().find(".service-content:visible").hide("fast");
+	$(".service_result").hide();
     });
 
     $('ul#services_ul li').quicksearch({
@@ -116,14 +117,14 @@ function select_status (val) {
 </style>
 
 
-<% unless @permissions[:execute] %>
-<p><%=_("You do not have permission to execute the services.")%></p>
-<% end %>
-
-
 <div class='plugin-icon'><img src='/icons/yast-system.png' alt=''/><%= _("System Services") %></div>
 
 <div class="plugin-content grid_12" id="services-list">
+
+
+<% unless @permissions[:execute] %>
+<p style="padding: 10px"><%=_("You do not have permission to execute the services.")%></p>
+<% end %>
 
 <ul id="services_ul">
 
@@ -182,12 +183,13 @@ commands	= [ "start", "stop", "restart", "reload" ]
 		html_options[:id]	= cmd
 		link_to_remote cmd,
 		    :url	=> url,
-		    :loading	=> "$('#service_progress_#{service.name}').show(); $('#service_status_#{service.name}').hide()",
+		    :loading	=> "$('#service_progress_#{service.name}').show(); $('#service_status_#{service.name}').hide(); $('#service_result_#{service.name}').hide();",
 		    :complete   => remote_function(:update => "service_status_#{service.name}",
 		        :url => status_url,
-			:complete => "$('#service_progress_#{service.name}').hide(); $('#service_status_#{service.name}').show(); toggle_service_info ('#service_status_#{service.name}');"
+			:complete => "$('#service_progress_#{service.name}').hide(); $('#service_status_#{service.name}').show(); toggle_service_info ('#service_status_#{service.name}'); $('#service_result_#{service.name}').show();"
 		    ),
-		    :html	=> html_options
+		    :html	=> html_options,
+		    :update	=> "service_result_#{service.name}"
 	    %>
 	<%
 	end
@@ -202,12 +204,16 @@ commands	= [ "start", "stop", "restart", "reload" ]
 
 	link_to_remote _('refresh status'), :update => "service_status_#{service.name}",
 	    :url => url,
-	    :loading  => "$('#service_progress_#{service.name}').show(); $('#service_status_#{service.name}').hide()",
+	    :loading  => "$('#service_progress_#{service.name}').show(); $('#service_status_#{service.name}').hide(); $('#service_result_#{service.name}').hide();",
 	    :complete => "$('#service_progress_#{service.name}').hide(); $('#service_status_#{service.name}').show()"
       %>
+
+      <span class='service_result' id='service_result_<%=service.name%>'>
+	<%= render :partial => 'result' %>
+      </span>
   </div>
   </li>
-  <% end # end of @services.each %>
+<% end %>
 </ul>
-</div>
 <%= link_to _("Back"), '/', :class=>"button" %>
+</div>
