disable checkbox to avoid confusion with setting permissions (bnc#583203)

--- a/plugins/permissions/app/views/permissions/index.rhtml
+++ b/plugins/permissions/app/views/permissions/index.rhtml
@@ -78,7 +78,7 @@
             <% last_level = @revoke_data[k][:level] %>
        <%= "  " * last_level %><ul>
        <%= "  " * (last_level+1) %><li>
-		  <input type="checkbox" name= <%= @revoke_data[k][:path] %> value="grant">
+		  <input type="checkbox" name= <%= @revoke_data[k][:path] %> value="grant" disabled="disabled">
 		  <%= @revoke_data[k][:label] %>
             <% if k < @revoke_data.size-1 && @revoke_data[k+1][:level] == @revoke_data[k][:level] %>
        <%= "  " * (last_level+1) %></li>
@@ -90,11 +90,11 @@
             <% end %>
             <% last_level = @revoke_data[k][:level] %>
        <%= "  " * last_level %><li>
-		  <input type="checkbox" name= <%= @revoke_data[k][:path] %> value="grant">
+		  <input type="checkbox" name= <%= @revoke_data[k][:path] %> value="grant" disabled="disabled">
 		  <%= @revoke_data[k][:label] %>
           <% else %>
        <%= "  " * (last_level+1) %><li>
-		  <input type="checkbox" name= <%= @revoke_data[k][:path] %> value="grant">
+		  <input type="checkbox" name= <%= @revoke_data[k][:path] %> value="grant" disabled="disabled">
 		  <%= @revoke_data[k][:label] %>
        <%= "  " * (last_level+1) %></li>
           <% end %>
@@ -118,7 +118,7 @@
             <% last_level = @grant_data[k][:level] %>
        <%= "  " * last_level %><ul>
        <%= "  " * (last_level+1) %><li>
-		  <input type="checkbox" name= <%= @grant_data[k][:path] %> value="revoke">
+		  <input type="checkbox" name= <%= @grant_data[k][:path] %> value="revoke" disabled="disabled">
 		  <%= @grant_data[k][:label] %>
             <% if k < @grant_data.size-1 && @grant_data[k+1][:level] == @grant_data[k][:level] %>
        <%= "  " * (last_level+1) %></li>
@@ -130,11 +130,11 @@
             <% end %>
             <% last_level = @grant_data[k][:level] %>
        <%= "  " * last_level %><li>
-		  <input type="checkbox" name= <%= @grant_data[k][:path] %> value="revoke">
+		  <input type="checkbox" name= <%= @grant_data[k][:path] %> value="revoke" disabled="disabled">
 		  <%= @grant_data[k][:label] %>
           <% else %>
        <%= "  " * (last_level+1) %><li>
-		  <input type="checkbox" name= <%= @grant_data[k][:path] %> value="revoke">
+		  <input type="checkbox" name= <%= @grant_data[k][:path] %> value="revoke" disabled="disabled">
 		  <%= @grant_data[k][:label] %>
        <%= "  " * (last_level+1) %></li>
           <% end %>
