--- a/plugins/users/app/views/users/edit.html.erb
+++ b/plugins/users/app/views/users/edit.html.erb
@@ -208,6 +208,6 @@
     </p>
     </fieldset>
     </div>
-    <p><%= f.submit _("Update"), :disabled => disabled, :onclick=>"return user_validation();" %><%= link_to _('Back'), {:action => :index}, :class => "button"%></p>
+    <p><%= link_to _('Cancel'), {:action => :index}%><%= f.submit _("Save"), :disabled => disabled, :onclick=>"return user_validation();" %></p>
   </div>
 <% end %>
