ouch, no iconbuttons yet

--- a/plugins/users/app/views/users/index.html.erb
+++ b/plugins/users/app/views/users/index.html.erb
@@ -70,7 +70,7 @@
 
 <% if @permissions[:useradd] %>
 <div class='pad1_2em'>
-  <%= link_to  _("New User..."), {:action => :new }, :class=>'iconbutton', :onclick=>"$('#progress').show()" -%>
+  <%= link_to  _("New User..."), {:action => :new }, :class=>'button', :onclick=>"$('#progress').show()" -%>
 </p>
 <% end %>
 </div>
