Classes for zebra-tables

--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -623,6 +623,13 @@ th.checkbox {
   text-align: center;
 }
 
+tr.odd {
+  background-color: #fcfcfc;
+}
+
+tr.even {
+  background-color: #bee9ff;
+}
 .clipboard {
   display: block;
   width: 14px;
