--- a/plugins/administrator/app/views/administrator/index.html.erb
+++ b/plugins/administrator/app/views/administrator/index.html.erb
@@ -7,11 +7,6 @@
 
   <style type="text/css">
     label.error { display: none; color: red; padding-left: 11.5em; padding-bottom: 1.5em; margin-top: -0.5em; text-align: left; vertical-align: top; width: 50% }
-
-   #adminForm fieldset {
-        background-color: #eeeeee;
-        margin: 1em;
-    }
   </style>
 
   <script type="text/javascript">
@@ -66,7 +61,7 @@
 
   <% form_for(:administrator, @administrator, :url => { :action => "update" }, :html => { :method => :put, :id => "adminForm", :onsubmit => "$('#progress').show()", :autocomplete => :off } ) do |f| %>
   <%= f.error_messages %>
-    <fieldset class="wrapper" id="password">
+    <fieldset class="wrapper with-background" id="password">
         <legend><%= _("Root User Password Setup") -%></legend>
 	<p><label><%=_("Password")%></label>
 	<!-- onkeyup handler is a workaround for a jQuery bug - it watches only one field for changes in equalTo check -->
@@ -79,7 +74,7 @@
     <!-- this is a pre-generated placeholder for the validation messages -->
     <p><label for="administrator_confirm_password" generated="true" class="error"></label></p>
     </fieldset>
-    <fieldset class="wrapper">
+    <fieldset class="wrapper with-background">
         <legend><%= _("Root User Mail Setup") -%></legend>
 	<p>
 	<label><%=_("Forward mail to")%></label>
