--- a/plugins/software/app/views/repositories/_repository_checkbox.html.erb
+++ b/plugins/software/app/views/repositories/_repository_checkbox.html.erb
@@ -10,17 +10,16 @@
 %>
 
 <% if error.blank? -%>
-<%# jQuery doesn't work properly when id contains brackets, escape them %>
-  <% jquery_id = h id -%>
-  <% jquery_id.gsub!('(', '\\\\\\\\(') -%>
-  <% jquery_id.gsub!(')', '\\\\\\\\)') -%>
+<%# jQuery doesn't work properly when the selector contains some metacharcaters, escape them
+    see http://docs.jquery.com/Selectors %>
+  <% jquery_id = h escape_jquery_selector(id) -%>
 
   <%= image_tag 'working.gif', :height => 16, :width => 16, :border => 0,
-    :id => "repo_progress_#{h id}",
+    :id => "repo_progress_#{id}",
     :style => 'display: none', :alt => 'working...' -%>
 
   <input type="checkbox" id="repo_status_<%= h id -%>" <%= disabled ? ' disabled ' : '' -%> <%= enabled ? ' checked ' : '' -%>
-	 onclick="<%=  remote_function(:update => "repo_cell_#{jquery_id}",
+	 onclick="<%=  remote_function(:update => "#repo_cell_#{jquery_id}",
     :loading  => "$('#repo_progress_#{jquery_id}').show(); $('#repo_status_#{jquery_id}').hide()",
     :url => { :action => :set_status, :id => id, :params => { :enabled => (!enabled).to_s}}) -%>"
 	 />
