make it translatable

--- a/plugins/users/app/views/users/index.html.erb
+++ b/plugins/users/app/views/users/index.html.erb
@@ -29,7 +29,7 @@
 
  $('table tbody tr').quicksearch({
         attached: 'div#qs_anchor',
-	inputText: 'Type user name or login ...',
+	inputText: '<%= _("Type user name or login ...")%>',
 	inputClass: 'qs_input',
         loaderText: '',
         labelText: '<%= _("Filter:")%>',
