--- a/plugins/users/app/views/users/edit.html.erb
+++ b/plugins/users/app/views/users/edit.html.erb
@@ -3,6 +3,7 @@
 <% content_for :head do %>
   <%= javascript_include_tag :defaults %>
   <%= javascript_include_tag "digitalspaghetti.password.js" %>
+  <%= javascript_include_tag "users_edit.js" %>
 
   <style type="text/css">
     label.error {
@@ -33,6 +34,7 @@
   </style>
 
  <script language='javascript'>
+
   $(document).ready(function(){
    $("#tab_login")[0].style.display="block";
 
@@ -59,81 +61,8 @@
 	    "<%= _("Very Strong") %>"
 	  ],
       });
-
  })
 
-   function user_validation(){
-     valid=false;
-     password_validation_enabled = true;
-     valid =  $('#userForm').validate().element('#user_user_password2') && $('#userForm').validate().element('#user_uid_number');
-     if (!valid){
-       // Remove highlighting from tabs and highlight only first one
-       $('.tab-nav').find('a').removeClass('selected');
-       $(".t_login").addClass("selected")
-
-       $("#tab_login")[0].style.display="block";
-       $("#tab_groups")[0].style.display="none";
-       $("#tab_advanced")[0].style.display="none";
-     }
-     return valid;
-   }
-
-  // fill user and groups containers
-  function _initializeDragContainer(a_groups,containername){
-   var container=document.getElementById(containername);
-   while(container.hasChildNodes()){
-	container.removeChild(container.lastChild);
-   }
-   for(var i=0;i<a_groups.length;i++){
-     var div = document.createElement('div');
-     div.setAttribute('id', a_groups[i].trim());
-     div.setAttribute('class', 'GBox');
-     div.innerHTML=a_groups[i].trim();
-     container.appendChild(div);
-   }
-  }
-
-  function _filter_all_groups(group){
-   var mygroups=[];
-   if ($('#user_grp_string')[0].value.trim().length>0) mygroups = $('#user_grp_string')[0].value.split(",");
-   var found=false;
-   for(i=0;i<mygroups.length;i++){
-     if (mygroups[i]==group) found=true;
-   }
-   return !found;
-  }
-
-  // open groups "popup" dialog
-  function open_groups_dialog(){
-   var mygroups=[];
-   if ($('#user_grp_string')[0].value.trim().length>0) mygroups = $('#user_grp_string')[0].value.split(",");
-   _initializeDragContainer(mygroups,'ContainerUser');
-
-   var allgroups = $('#user_all_grps_string')[0].value.split(",");
-   allgroups=allgroups.filter(_filter_all_groups);
-   _initializeDragContainer(allgroups,'ContainerGroups');
-
-   $('#groups').dialog({ buttons: { 'Ok': function() { store_groups(this); }, 'Cancel': function() { $(this).dialog('close'); } } });
-   $('#groups').dialog('open');
-  }
-
-  // store groups from popup dialog
-  function store_groups(dlg){
-    var user = $('#ContainerUser')[0].childNodes;
-    var groups="";
-    for (i=0;i<user.length;i++){
-     groups+=user[i].innerHTML;
-     if (i<user.length-1) groups+=",";
-    }
-    $('#user_grp_string')[0].value=groups;
-    $(dlg).dialog('close');
-  }
-
-  function moveItem(e,target){
-   // this hack is for support both firefox and chrome
-   var item = (typeof(e.srcElement) != "undefined") ? e.srcElement : e.originalTarget;
-    if(item.className=='GBox') $('#'+item.id).appendTo($('#'+target));
-  }
     // start password validation workaround only when "Save" button has been pressed
     password_validation_enabled = false;
  </script>
@@ -179,6 +108,7 @@
 	<%= f.text_field :grp_string, :disabled => disabled %>
 	<a href="#" class="button" onclick="open_groups_dialog();return false;">Manage Groups</a>
     </p>
+    <p><label id="groups-error" class="error"></label><p>
     <p>
 	<label><%=_("Default Group")%></label>
 	<%= f.text_field :groupname, :disabled => disabled %>
@@ -206,8 +136,9 @@
 	<label><%=_("UID Number")%></label>
 	<%= f.text_field :uid_number, :disabled => disabled, :min => 1000, :class => "number"  %>
     </p>
+    <p><label id="uid-error" class="error"></label><p>
     </fieldset>
     </div>
-    <p><%= link_to _('Cancel'), {:action => :index}%><%= f.submit _("Save"), :disabled => disabled, :onclick=>"return user_validation();" %></p>
+    <p><%= link_to _('Cancel'), {:action => :index}%><%= f.submit _("Save"), :disabled => disabled, :onclick=>"return edit_user_validation();" %></p>
   </div>
 <% end %>
