--- a/plugins/users/app/views/users/index.html.erb
+++ b/plugins/users/app/views/users/index.html.erb
@@ -57,12 +57,12 @@
   <tbody>
   <% for user in @users %>
   <tr class= <%= cycle('odd', 'even') -%> >
-    <td align=center ><%= user.uid  -%></td>
-    <td align=center width="65%"><%= link_to ( user.cn || "-none-" ), {:action => :edit, :id => user.id}, :onclick=>"$('#progress').show()" -%></td>
+    <td align=center id="login"><%= user.uid  -%></td>
+    <td align=center width="65%" id="fullname"><%= link_to ( user.cn || "-none-" ), {:action => :edit, :id => user.id}, :onclick=>"$('#progress').show()" -%></td>
     <% if @permissions[:userdelete] %>
     <td class="icon" width="10%"><%= html_delete_link(user.uid, :destroy) %></td>
     <% end %>
-  </td>
+  </tr>
   <% end %>
   </tbody>
 </table>
